Release 4.2.0
Release notes are available at:
https://docs.dremio.com/release-notes/42-release-notes.html

Change-Id: I33e754d02973a3c03df7761cb20b1858e0e9a257